# SensorFusion

./: CMakeLists.txt  README.md  main.cpp  run.sh
include/: CompassSensor.h  FusionModule.h  FusionResult.h  GPSSensor.h  IMUSensor.h  Sensor.h  SensorData.h  SensorDataN.h  SensorManager.h
src/: CompassSensor.cpp  FusionModule.cpp  GPSSensor.cpp  IMUSensor.cpp  SensorManager.cpp  main.cpp
tests/: SensorTest.cpp
